crates/stef-compiler/tests/inputs/invalid/struct_named_dup_id.stef
struct Sample {
    field1: string @1,
    field2: string @1,
}
